--- a/eShopSolution.AdminApp/appsettings.json
+++ b/eShopSolution.AdminApp/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Tokens": {
+  "DefaultLanguageId": "en-US",
+  "Token": {
     "Key": "0123456789ABCDEF",
     "Issuer": "https://api.magnussen.com"
   }
